name:                bwitterkuchen
version:             0.1.0.0
synopsis:            CUI Twitter Client
description:         Please see README.md
homepage:            https://github.com/myuon/bwitterkuchen
license:             MIT
license-file:        LICENSE
author:              myuon
maintainer:          ioi.joi.koi.loi@gmail.com
copyright:           2016 myuon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable bwitterkuchen
  hs-source-dirs:      app/GUI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , vty
                     , bwitterkuchen
                     , brick
                     , twitter-conduit
                     , twitter-types-lens
                     , conduit
                     , text
                     , lens
                     , resourcet
                     , containers
                     , vector
                     , text-zipper
                     , bytestring
  default-language:    Haskell2010

executable auth
  hs-source-dirs:      app
  main-is:             Auth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Auth
  build-depends:       base
                     , twitter-conduit
                     , authenticate-oauth
                     , bytestring
  default-language:    Haskell2010

test-suite bwitterkuchen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bwitterkuchen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myuon/bwitterkuchen
