
name:                bwitterkuchen
version:             0.1.5.2
synopsis:            CUI Twitter Client
description:         Please see README.md
homepage:            https://github.com/myuon/bwitterkuchen
license:             MIT
license-file:        LICENSE
author:              myuon
maintainer:          ioi.joi.koi.loi@gmail.com
copyright:           2017 myuon
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tweets
  build-depends:       base >= 4.7 && < 5
                     , twitter-conduit
                     , twitter-types-lens
                     , bytestring
                     , mtl
                     , lens
                     , text
                     , aeson
                     , resourcet
                     , conduit
  default-language:    Haskell2010

executable tw
  hs-source-dirs:      app
  main-is:             Tw.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Tw
  build-depends:       base
                     , bwitterkuchen
                     , twitter-conduit
                     , twitter-types-lens
                     , bytestring
                     , lens
                     , text
  default-language:    Haskell2010

executable kuchen
  hs-source-dirs:      app
  main-is:             CUI.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is CUI
  build-depends:       base
                     , vty
                     , bwitterkuchen
                     , brick
                     , twitter-conduit
                     , twitter-types
                     , twitter-types-lens
                     , conduit
                     , text
                     , lens
                     , resourcet
                     , containers
                     , vector
                     , text-zipper
                     , bytestring
                     , mtl
  default-language:    Haskell2010

executable auth
  hs-source-dirs:      app
  main-is:             Auth.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Auth
  build-depends:       base
                     , twitter-conduit
                     , authenticate-oauth
                     , bytestring
  default-language:    Haskell2010

test-suite bwitterkuchen-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bwitterkuchen
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/myuon/bwitterkuchen
